@@ -1,0 +1,11 @@
+;;; Directory Local Variables
+;;; See Info node `(emacs) Directory Variables' for more information.
+
+((nil . ((indent-tabs-mode . nil)
+         (tab-width . 4)
+         (comment-column . 32)
+         (fill-column . 80)))
+ (c-mode . ((c-file-style . "stroustrup")))
+ (java-mode . ((c-file-style . "BSD")))
+ ("src/imported"
+  . ((nil . ((change-log-default-name . "ChangeLog.local"))))))
