@@ -1,3 +1,7 @@
+2011-08-01  Meteor Liu  <meteor1113@gmail.com>
+
+	* sample/.dir-locals.el: Add.
+
 2011-07-31  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (auto-mode-alist): Setup auto-mode-alist for hexl-mode.
